# parona

./: .gitignore  README.md  main.py  pyproject.toml  sas_log
examples/: Fairall_9.ipynb  XMM_NGC_4051.py  xmm_obs.py
obs/: nustar.py  xmmnewton.py
src/parona/: __init__.py  callds9.py  converters.py  nustar.py  plots.py  swift_uvot.py  utils.py  xmm_lc.py  xmmnewton.py
test/: test_xmm.py
tools/: plots.py
