[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parona"
authors = [{ name = "Mehdy Lefkir", email = "mehdylefkir.work@gmail.com" }]
description = "Scripts for data reduction of observations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "pyds9",
    "swifttools",
]
version = "0.1.0"


[tool.setuptools.packages.find]
where = ["src"]
